--- a/src/assets/styles/_colors.scss
+++ b/src/assets/styles/_colors.scss
@@ -127,6 +127,12 @@ $profile-summary-list-of-interests-background-color: #dce6fd;
 $profile-summary-list-of-interests-background-color-dark: #616161;
 $profile-summary-list-of-interests-p: #481a89;
 $profile-summary-list-of-interests-p-dark: white;
+$profile-summary-unfollow-button-border: 1px solid rgba(0, 0, 0,.1);
+$profile-summary-unfollow-button-border-dark: 1px solid rgba(255, 255, 255, .5);
+$profile-summary-unfollow-button-color: #2d2d2d;
+$profile-summary-unfollow-button-color-dark: white;
+$profile-summary-unfollow-button-border-color-hover: #481a89;
+$profile-summary-unfollow-button-border-color-hover-dark: rgba(255, 255, 255, 1);
 
 // * Manage page
 $manage-header-control-background-color: #f6f8fa;
@@ -183,6 +189,8 @@ $user-box-box-shadow-hover-dark: 0 22px 32px 0 rgba(0, 0, 0, 0.5);
 // * Empty state component
 $empty-state-container-background: white;
 $empty-state-container-background-dark: #212121;
+$empty-state-container-action-icon: white;
+$empty-state-container-action-icon-dark: white;
 
 $colors: (--navigation-background-color: ($navigation-background-color,
     $navigation-background-color-dark,
@@ -258,6 +266,10 @@ $colors: (--navigation-background-color: ($navigation-background-color,
   --profile-summary-remaining-followers-color: ($profile-summary-remaining-followers-color, $profile-summary-remaining-followers-color-dark),
   --profile-summary-list-of-interests-background-color: ($profile-summary-list-of-interests-background-color, $profile-summary-list-of-interests-background-color-dark),
   --profile-summary-list-of-interests-p: ($profile-summary-list-of-interests-p, $profile-summary-list-of-interests-p-dark),
+  --profile-summary-unfollow-button-border: ($profile-summary-unfollow-button-border, $profile-summary-unfollow-button-border-dark),
+  --profile-summary-unfollow-button-color: ($profile-summary-unfollow-button-color, $profile-summary-unfollow-button-color-dark),
+  --profile-summary-unfollow-button-border-color-hover: ($profile-summary-unfollow-button-border-color-hover, $profile-summary-unfollow-button-border-color-hover-dark),
+
   --manage-header-control-background-color: ($manage-header-control-background-color, $manage-header-control-background-color-dark),
   --manage-header-control-input-placeholder-color: ($manage-header-control-input-placeholder-color, $manage-header-control-input-placeholder-color-dark),
   --manage-header-control-input-color: ($manage-header-control-input-color, $manage-header-control-input-color-dark),
@@ -282,4 +294,5 @@ $colors: (--navigation-background-color: ($navigation-background-color,
   --user-box-background-color: ($user-box-background-color, $user-box-background-color-dark),
   --user-box-box-shadow: ($user-box-box-shadow, $user-box-box-shadow-dark),
   --user-box-box-shadow-hover: ($user-box-box-shadow-hover, $user-box-box-shadow-hover-dark),
-  --empty-state-container-background: ($empty-state-container-background, $empty-state-container-background-dark));
+  --empty-state-container-background: ($empty-state-container-background, $empty-state-container-background-dark),
+  --empty-state-container-action-icon: ($empty-state-container-action-icon, $empty-state-container-action-icon-dark));
