--- a/src/app/components/empty-state/empty-state.component.scss
+++ b/src/app/components/empty-state/empty-state.component.scss
@@ -8,10 +8,22 @@
     place-items: center;
 
     .content {
+        .image {
+            margin-bottom: 25px;
+
+            img {
+                width: 70%;
+                display: block;
+                margin-left: auto;
+                margin-right: auto;
+            }
+        }
+
         .action {
             width: 50px;
             height: 50px;
-            background-color: #424242;
+            background-color: #481A89;
+            box-shadow: 0px 15px 20px -5px rgba(72,26,137,0.5);
             border-radius: 50%;
             margin: 15px;
             margin-right: 15px;
@@ -20,7 +32,17 @@
             place-items: center;
             justify-self: center;
             margin-left: auto;
-            margin-right: auto
+            margin-right: auto;
+
+            fa-icon {
+                font-size: 30px;
+                margin-top: 5px;
+                color: var(--empty-state-container-action-icon);
+            }
+        }
+
+        .text {
+            text-align: center;
         }
     }
 }
