updated share resource page

--- a/src/assets/styles/_colors.scss
+++ b/src/assets/styles/_colors.scss
@@ -164,7 +164,7 @@ $resource-stats-like-dark: white;
 
 // * Share resource
 $custom-image-background-color: rgb(233, 231, 231);
-$custom-image-background-color-dark: black;
+$custom-image-background-color-dark: #2d2d2d;
 $custom-image-p: inherit;
 $custom-image-p-dark: white;
 $custom-image-p-a: inherit;
