--- a/src/app/pages/share-resource/share-resource.component.scss
+++ b/src/app/pages/share-resource/share-resource.component.scss
@@ -8,15 +8,34 @@
     height: 350px;
     margin-bottom: 15px;
     position: relative;
+    display: grid;
+    place-items: center;
     cursor: pointer;
 
-    p {
+    .icon-text {
         color: var(--custom-image-p);
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
         text-align: center;
+
+        .icon-container {
+            width: 50px;
+            height: 50px;
+            background-color: #481A89;
+            box-shadow: 0px 15px 20px -5px rgba(72,26,137,0.5);
+            border-radius: 50%;
+            display: grid;
+            place-items: center;
+            margin-left: auto;
+            margin-right: auto;
+
+            fa-icon {
+                font-size: 25px;
+                color: var(--empty-state-container-action-icon);
+            }
+
+            fa-icon.globe {
+                margin-top: 5px;
+            }
+        }
 
         a {
             color: var(--custom-image-p-a);
@@ -35,16 +54,42 @@
     margin-bottom: 15px;
     position: relative;
 
-    p {
-        color: var(--custom-image-p);
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        text-align: center;
+    .no-image-container {
+        width: 100%;
+        height: 100%;
+        position: relative;
+        overflow: hidden;
+        .image {
+            width: 100%;
+            height: 100%;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            filter: blur(8px)
+        }
 
-        a {
-            color: var(--custom-image-p-a);
+        .overlay {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            background-color: rgba(0, 0, 0, .6)
+        }
+
+        .text {
+            position: absolute;
+            top: 15px;
+            left: 15px;
+            p {
+                font-family: "Montserrat", sans-serif;
+                font-size: 3rem;
+                color: var(--custom-image-p);
+
+                a {
+                    color: var(--custom-image-p-a);
+                }
+            }
         }
     }
 }
