--- a/src/app/pages/share-resource/share-resource.component.html
+++ b/src/app/pages/share-resource/share-resource.component.html
@@ -50,9 +50,7 @@
               </div>
   
               <p>
-                If your link has an
-                <a href="http://ogp.me/" target="_blank">Open Graph</a> image, it'll
-                appear here
+                If your link has an image, it'll appear here
               </p>
             </div>
           </div>
