--- a/src/app/pages/share-resource/share-resource.component.scss
+++ b/src/app/pages/share-resource/share-resource.component.scss
@@ -15,6 +15,7 @@
     .icon-text {
         color: var(--custom-image-p);
         text-align: center;
+        padding: 15px;
 
         .icon-container {
             width: 50px;
