--- a/src/assets/styles/material-overrides.scss
+++ b/src/assets/styles/material-overrides.scss
@@ -1,3 +1,7 @@
+.mat-drawer-inner-container {
+  overflow: hidden !important;
+}
+
 .mat-drawer-content {
   background-color: var(--mat-drawer-content-color);
 }
