--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,7 +21,9 @@
 }
 
 .active-sidenav {
-  font-weight: bold;
+  background-color: rgba(0,0,0,.1);
+  border-radius: 5px;
+  padding-left: 10px;
 }
 
 .float-right {
