--- a/src/app/components/user-image/user-image.component.scss
+++ b/src/app/components/user-image/user-image.component.scss
@@ -15,6 +15,15 @@
   }
 }
 
+.xxs {
+  width: 25px;
+  height: 25px;
+
+  span {
+    font-size: 0.3rem;
+  }
+}
+
 .xs {
   width: 35px;
   height: 35px;
