updated login and signup pages to use custom input component

--- a/src/app/components/user-image/user-image.component.html
+++ b/src/app/components/user-image/user-image.component.html
@@ -5,7 +5,7 @@
   [ngClass]="[imageSizeClass, clickableClass]"
   [ngStyle]="url"
 >
-  <span *ngIf="!userData.image && placeholder">
+  <p *ngIf="!userData.image && placeholder">
     {{ placeholder }}
-  </span>
+  </p>
 </div>
