--- a/src/app/components/user-image/user-image.component.scss
+++ b/src/app/components/user-image/user-image.component.scss
@@ -7,11 +7,12 @@
   background-position: center;
   background-repeat: no-repeat;
   transition: border 0.2s ease-in-out;
+  place-items: center;
 
-  span {
+  p {
+    margin: 0;
     font-family: "Montserrat", sans-serif;
     color: #4a4a4a;
-    place-self: center;
   }
 }
 
@@ -19,8 +20,9 @@
   width: 25px;
   height: 25px;
 
-  span {
-    font-size: 0.3rem;
+  p {
+    margin-top: -4px;
+    font-size: 0.5rem;
   }
 }
 
@@ -28,7 +30,7 @@
   width: 35px;
   height: 35px;
 
-  span {
+  p {
     font-size: 0.6rem;
   }
 }
@@ -37,7 +39,7 @@
   width: 40px;
   height: 40px;
 
-  span {
+  p {
     font-size: 0.9rem;
   }
 }
@@ -46,7 +48,7 @@
   width: 75px;
   height: 75px;
 
-  span {
+  p {
     font-size: 1.4rem;
   }
 }
