--- a/src/assets/styles/no-auth-layout.scss
+++ b/src/assets/styles/no-auth-layout.scss
@@ -9,7 +9,7 @@
 	.left {
 		align-self: center;
 		justify-self: center;
-		background-color: #F6F8FA;
+		background-color: white;
 		padding: 25px;
 
 		h1 {
@@ -18,12 +18,6 @@
 			font-weight: 900;
 			text-transform: uppercase;
 			letter-spacing: 5px;
-		}
-
-		p {
-			font-size: 14px;
-			margin-bottom: 50px;
-			line-height: 20px;
 		}
 
 		.form {
@@ -44,10 +38,16 @@
 
 		.alternative {
 			font-size: 12px;
-			text-align: center;
+			display: grid;
+			grid-template-columns: 1fr 25px;
+			width: 215px;
+			margin-left: auto;
+			margin-right: auto;
+			grid-gap: 15px;
 
 			span:nth-of-type(1) {
-				margin-right: 15px;
+				align-self: center;
+				justify-self: end;
 			}
 
 			.go-to-signup {
