--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -19,7 +19,7 @@
         <label>Password</label>
       </div>
       <div class="input-container">
-        <input type="text" formControlName="password" />
+        <input type="password" formControlName="password" />
       </div>
       <p class="error-message"
         *ngIf="loginFormControls.password.hasError('required') && loginFormControls.password.dirty">
