--- a/src/app/components/empty-state/empty-state.component.html
+++ b/src/app/components/empty-state/empty-state.component.html
@@ -36,6 +36,9 @@
         </div>
 
         <div class="content" *ngSwitchCase="'feed'">
+            <div class="image">
+                <img src="../../../assets/images/empty-state.svg" alt="empty">
+            </div>
             <div class="text">
                 {{ text }}
             </div>
