--- a/src/app/components/post/po/po.component.html
+++ b/src/app/components/post/po/po.component.html
@@ -13,7 +13,7 @@
   </div>
 </div>
 
-<div class="popover-item" matRipple>
+<div class="popover-item" matRipple (click)="copyLink()">
   <div class="top">
     <fa-icon [icon]="faLink"></fa-icon>
     <span>Copy link</span>
