--- a/src/app/components/snackbar/snackbar.component.html
+++ b/src/app/components/snackbar/snackbar.component.html
@@ -6,6 +6,6 @@
 
 <div *ngIf="!data.error">
   <span class="snackbar">
-    <fa-icon [icon]="faTimesCircle"></fa-icon>{{ data.message }}
+    {{ data.message }}
   </span>
 </div>
