--- a/src/app/pages/profile/change-password/change-password.component.html
+++ b/src/app/pages/profile/change-password/change-password.component.html
@@ -1,5 +1,5 @@
 <!-- Change Password -->
-<div class="section-container">
+<div class="section-container" style="margin-bottom: 0">
   <div class="section" [ngClass]="{ 'padding-bottom': !showPasswordForm }">
     <div
       class="section-header-with-icon"
