added minor fix to no image component

--- a/src/app/components/resource-no-image/resource-no-image.component.scss
+++ b/src/app/components/resource-no-image/resource-no-image.component.scss
@@ -4,9 +4,9 @@
     display: grid;
     place-items: center;
     margin-bottom: 15px;
-    min-height: 400px;
     max-width: 600px;
     max-height: 400px;
+    height: 200px;
 
     .text-container {
         p {
@@ -16,11 +16,11 @@
         }
     
         p:nth-of-type(1) {
-            font-size: 4rem;
+            font-size: 2rem;
         }
     
         p:nth-of-type(2) {
-            font-size: 2rem;
+            font-size: 1rem;
         }
     }
 }
@@ -56,5 +56,21 @@
         text-align: center;
         font-weight: bold;
         font-size: 16px;
+    }
+}
+
+@media (min-width: 768px) {
+    .no-image-text {
+        height: 400px;
+
+        .text-container {
+            p:nth-of-type(1) {
+                font-size: 3rem;
+            }
+        
+            p:nth-of-type(2) {
+                font-size: 2rem;
+            }
+        }
     }
 }
