--- a/src/app/pages/share-resource/share-resource.component.html
+++ b/src/app/pages/share-resource/share-resource.component.html
@@ -74,11 +74,15 @@
             <label>Title</label>
           </div>
           <div class="input-container">
-            <input type="text" formControlName="title" placeholder="Give it a title" />
+            <input type="text" formControlName="title" placeholder="Give it a title" maxlength="250"/>
           </div>
           <p class="error-message" *ngIf="shareResourceFormControls.title.hasError('required') &&
           shareResourceFormControls.title.dirty">
             Title required
+          </p>
+          <p class="error-message" *ngIf="shareResourceFormControls.title.hasError('maxLength') &&
+          shareResourceFormControls.title.dirty">
+            Title cannot be longer than 250 characters
           </p>
         </div>
 
