--- a/src/app/pages/share-resource/share-resource.component.html
+++ b/src/app/pages/share-resource/share-resource.component.html
@@ -46,8 +46,8 @@
             appear here
           </p> -->
 
-          <div class="custom-image">
-            <div class="icon-text" *ngIf="!ogImage">
+          <div class="custom-image" *ngIf="!ogImage">
+            <div class="icon-text">
               <div class="icon-container">
                 <fa-icon [icon]="faGlobe" class="globe"></fa-icon>
               </div>
