--- a/src/app/layouts/no-auth/no-auth.component.scss
+++ b/src/app/layouts/no-auth/no-auth.component.scss
@@ -3,7 +3,7 @@ $image-width-425: 400px;
 $image-height: 300px;
 
 .no-auth-layout {
-    background-color: var(--section-color);
+    background-color: var(--no-auth-layout-left-background-color);
 	display: grid;
 	grid-template-columns: 1fr;
 	width: 100%;
@@ -68,12 +68,14 @@ $image-height: 300px;
 			font-weight: 900;
 			text-transform: uppercase;
 			letter-spacing: 5px;
+			color: var(--no-auth-component-text-color);
 		}
 
 		p {
 			font-size: 14px;
 			margin-bottom: 50px;
 			line-height: 20px;
+			color: var(--no-auth-component-text-color);
 		}
 
 		.form {
@@ -82,6 +84,7 @@ $image-height: 300px;
 			.form-title {
 				font-family: 'Montserrat', sans-serif;
 				margin-bottom: 25px;
+				color: var(--no-auth-component-text-color);
 			}
 			mat-form-field {
 				width: 100%;
@@ -98,6 +101,7 @@ $image-height: 300px;
 
 			span:nth-of-type(1) {
 				margin-right: 15px;
+				color: var(--no-auth-component-text-color);
 			}
 
 			.go-to-signup {
