--- a/src/assets/styles/no-auth-layout.scss
+++ b/src/assets/styles/no-auth-layout.scss
@@ -9,7 +9,7 @@
 	.left {
 		align-self: center;
 		justify-self: center;
-		background-color: white;
+		background-color: var(--no-auth-layout-left-background-color);
 		padding: 25px;
 
 		h1 {
@@ -26,6 +26,7 @@
 			.form-title {
 				font-family: 'Montserrat', sans-serif;
 				margin-bottom: 25px;
+				color: var(--no-auth-component-text-color);
 			}
 			mat-form-field {
 				width: 100%;
@@ -48,6 +49,7 @@
 			span:nth-of-type(1) {
 				align-self: center;
 				justify-self: end;
+				color: var(--no-auth-component-text-color);
 			}
 
 			.go-to-signup {
