--- a/src/app/layouts/main/main.component.scss
+++ b/src/app/layouts/main/main.component.scss
@@ -4,15 +4,16 @@
 
 .app-container {
 	background-color: var(--mat-drawer-content-color);
-	display: flex;
-	flex-direction: column;
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
+	display: grid;
+	// flex-direction: column;
+	// position: absolute;
+	// top: 0;
+	// bottom: 0;
+	// left: 0;
+	// right: 0;
 	overflow-x: hidden;
 	width: 100%;
+	min-height: 100%;
 	height: 100%;
 
 	h1 {
